imporved ctrl+g navigation & copy,paste,export,import group presets
# Conflicts:
#	Comfizen/MainWindow.xaml
#	Comfizen/ViewModels/InputFieldViewModels.cs

--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -182,6 +182,7 @@
             <Setter Property="SnapsToDevicePixels" Value="True"/>
             <Setter Property="Foreground" Value="{StaticResource TextBrush}"/>
             <Setter Property="Template" Value="{StaticResource CustomContextMenuTemplate}"/>
+            <Setter Property="FontFamily" Value="Segoe UI"/>
         </Style>
 
         <Style TargetType="MenuItem">
