--- a/Comfizen/Views/UIConstructor.xaml
+++ b/Comfizen/Views/UIConstructor.xaml
@@ -83,10 +83,26 @@
 
                     <Button Content="{local:Translate UIConstructor_Cut}" 
                             Command="{Binding Data.CutFieldsCommand, Source={StaticResource Proxy}}"
-                            CommandParameter="{Binding Data.PopupTarget, Source={StaticResource Proxy}}"/>
+                            CommandParameter="{Binding Data.PopupTarget, Source={StaticResource Proxy}}"
+                            Click="ClosePopupOnClick"/>
                     <Button Content="{local:Translate UIConstructor_Paste}"
                             Command="{Binding Data.PasteFieldsCommand, Source={StaticResource Proxy}}"
-                            CommandParameter="{Binding Data.PopupTarget, Source={StaticResource Proxy}}" Margin="0,5,0,0"/>
+                            CommandParameter="{Binding Data.PopupTarget, Source={StaticResource Proxy}}" Margin="0,5,0,0"
+                            Click="ClosePopupOnClick"/>
+                    
+                    <Separator Margin="0,5"/>
+                    <Button Content="{local:Translate UIConstructor_CopyPresets}"
+                            Command="{Binding Data.CopyPresetsCommand, Source={StaticResource Proxy}}"
+                            CommandParameter="{Binding DataContext, RelativeSource={RelativeSource AncestorType=Popup}}"
+                            Click="ClosePopupOnClick"/>
+                    <Button Content="{local:Translate UIConstructor_PastePresets}"
+                            Command="{Binding Data.PastePresetsCommand, Source={StaticResource Proxy}}"
+                            CommandParameter="{Binding DataContext, RelativeSource={RelativeSource AncestorType=Popup}}" Margin="0,5,0,0"
+                            Click="ClosePopupOnClick"/>
+                    <Button Content="{local:Translate UIConstructor_PasteMergePresets}"
+                            Command="{Binding Data.PastePresetsMergeCommand, Source={StaticResource Proxy}}"
+                            CommandParameter="{Binding DataContext, RelativeSource={RelativeSource AncestorType=Popup}}" Margin="0,5,0,0"
+                            Click="ClosePopupOnClick"/>
 
                 </StackPanel>
             </Border>
@@ -362,6 +378,18 @@
                                                                 </Grid.ColumnDefinitions>
 
                                                                 <StackPanel Grid.Column="0" Orientation="Horizontal" Visibility="{Binding IsRenaming, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=invert}">
+                                                                    <TextBlock Text="★" Foreground="Gold" FontWeight="Bold" VerticalAlignment="Center" Margin="0,0,5,0" ToolTip="{local:Translate Presets_GroupHasPresetsTooltip}">
+                                                                        <TextBlock.Style>
+                                                                            <Style TargetType="TextBlock">
+                                                                                <Setter Property="Visibility" Value="Collapsed" />
+                                                                                <Style.Triggers>
+                                                                                    <DataTrigger Binding="{Binding HasPresets}" Value="True">
+                                                                                        <Setter Property="Visibility" Value="Visible" />
+                                                                                    </DataTrigger>
+                                                                                </Style.Triggers>
+                                                                            </Style>
+                                                                        </TextBlock.Style>
+                                                                    </TextBlock>
                                                                     <TextBlock Text="{Binding Name}" FontWeight="Bold" MouseLeftButtonDown="GroupName_MouseLeftButtonDown"/>
                                                                 </StackPanel>
                                                                 <TextBox Grid.Column="0" Text="{Binding Name, UpdateSourceTrigger=Explicit}" Style="{StaticResource InlineEditTextBox}" Visibility="{Binding IsRenaming, Converter={StaticResource BooleanToVisibilityConverter}}"/>
